--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,129 @@ a {
     opacity: 1;
   }
 }
+
+/* CHAT */
+
+
+#chat-widget-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 350px;
+    height: 500px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    z-index: 1000;
+    overflow: hidden;
+}
+#chat-widget-header {
+    background: #854fff;
+    color: white;
+    padding: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+}
+#chat-widget-header button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+}
+#chat-widget-body {
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto;
+}
+#chat-widget-body p {
+    margin-bottom: 15px;
+    padding: 12px;
+    border-radius: 8px;
+    font-size: 14px;
+    word-wrap: break-word;
+}
+#chat-widget-footer {
+    padding: 12px;
+    border-top: 1px solid #ddd;
+    display: flex;
+    gap: 10px;
+}
+#chat-widget-input {
+    flex: 1;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    outline: none;
+}
+#chat-widget-send {
+    background: #854fff;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+#chat-widget-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #854fff;
+    color: white;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    z-index: 1001;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+.user-message p {
+    background: #f1f1f1;
+    color: #333;
+    text-align: right;
+}
+.bot-message p {
+    background: #854fff;
+    color: #fff;
+    word-spacing: 2px;
+}
+.waiting-animation {
+    padding: 12px;
+    border-radius: 8px;
+    font-size: 14px;
+    word-wrap: break-word;
+}
+.waiting-animation .dot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    margin: 0 2px;
+    background-color: #854fff;
+    border-radius: 50%;
+    animation: ellipsis 1.4s infinite;
+}
+.waiting-animation .dot:nth-child(1) {
+    animation-delay: 0s;
+}
+.waiting-animation .dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.waiting-animation .dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+@keyframes ellipsis {
+    0%, 80%, 100% {
+        transform: scale(0);
+    }
+    40% {
+        transform: scale(1.0);
+    }
+}
