--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -218,3 +218,12 @@ a {
         transform: scale(1.0);
     }
 }
+
+@keyframes scrollLeftToRight {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(calc(100% - 100vw));
+    }
+}
